# advent_of_code_2024

./: .gitignore  CMakeLists.txt
include/: list.h
src/: day_five_1.c  day_four_1.c  day_four_2.c  day_one.c  day_one_2.c  day_three_1.c  day_three_2.c  day_two_1.c  day_two_2.c  list.c  test_list.c
